--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
         <div id="sidebar" class="d-flex flex-column flex-shrink-0 p-3 bg-light col-3 position-fixed">
           <div class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
             <img id="logo" src="/assets/logo-rd.png" alt="Logo da Religião de Deus do Cristo e do Espírito Santo">
-            <span class="fs-4 ms-3">Cantina - RD</span>
+            <span class="fs-4 ms-3">Cantina</span>
           </div>
           <hr>
           <ul class="nav nav-pills flex-column mb-auto">
