--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
       <div class="row">
         <div id="sidebar" class="d-flex flex-column flex-shrink-0 p-3 bg-light col-3 position-fixed">
           <div class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <img id="logo" src="/assets/logo-rd.png" alt="Logo da Religião de Deus do Cristo e do Espírito Santo">
+            <img id="logo" src="/assets/" alt="">
             <span class="fs-4 ms-3">Cantina</span>
           </div>
           <hr>
@@ -81,7 +81,7 @@
           <hr>
           <div class="dropdown align-items-baseline">
             <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="/assets/logo-rd.png" alt="Foto de Perfil" width="32" height="32" class="rounded-circle me-2">
+            <img src="/assets/" alt="Foto de Perfil" width="32" height="32" class="rounded-circle me-2">
             <strong>Usuário</strong>
             </a>
             <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
